v65: When showing the Add friend UI input please be sure it spans the height covering the chat input section as well; also ensure we keep out currently selected 1-14 tab selected and showing as that UI is in a different section

--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 49px); 
+  height: 100%; 
   background: #d2b48c;
   display: none;
   z-index: 1000;
@@ -201,6 +201,7 @@ body {
   justify-content: center;
   height: 100%;
   padding: 20px;
+  padding-bottom: 49px; 
 }
 
 .add-friend-text {
